# MathematicalToolkit

./: CMakeLists.txt
src/: MathematicalToolkit.hpp  dualad.hpp  dualop.hpp  exceptions.hpp  linalg.hpp  matrix_base.hpp  matrix_base_base.hpp  matrix_impl.hpp  matrix_initializer.hpp  matrix_ref.hpp  matrix_slice.hpp  utility.hpp
test/: CMakeLists.txt  test.cpp
